--- a/Eventsc.html
+++ b/Eventsc.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta cherset="UTF-8">
-    <Link rel="stylesheet" href="qqqy.css"/>
+    <Link rel="stylesheet" href="Ht.css"/>
     <link rel="shortcut icon" href="Bild/Stadt.ico" type="image/x-icon"/>
     <title> Events </title>
 </head>
@@ -33,6 +33,7 @@
             <button class="butt"> Weiter </button>
             </form>
             </div>
+
             <div class="kontf">
                 <img src="Bild2/Fam.jpeg" class="bil">
                     <p class="München"><b>Eintritt frei: für Kinder und Familien
@@ -45,24 +46,26 @@
                 <button class="butt"> Weiter </button>
                 </form>
             </div>
-                <div class="kontf">
-                    <img src="Bild2/sal.jpg" class="bil">
-                        <p class="München"><b>Münchner Sommernachtstraum 2023 im Olympiapark
-                            Der Münchner Sommernachtstraum im Olympiapark steigt am 15. Juli
-                            2023 mit einem großen Feuerwerk - davor gibt es Open-Air-Konzerte
-                            auf zwei Bühnen. Headliner auf....</b></p>
+
+             <div class="kontf">
+                <img src="Bild2/sal.jpg" class="bil">
+                    <p class="München"><b>Münchner Sommernachtstraum 2023 im Olympiapark
+                        Der Münchner Sommernachtstraum im Olympiapark steigt am 15. Juli
+                        2023 mit einem großen Feuerwerk - davor gibt es Open-Air-Konzerte
+                        auf zwei Bühnen. Headliner auf....</b></p>
         
-                    <form action="https://www.muenchen.de/veranstaltungen/freizeit/muenchner-sommernachtstraum-2023" target="_blank">
-                    <button class="butt"> Weiter </button>
-                    </form>
+                <form action="https://www.muenchen.de/veranstaltungen/freizeit/muenchner-sommernachtstraum-2023" target="_blank">
+                <button class="butt"> Weiter </button>
+                </form>
             </div>
-        </div>                            
+        </div>
+
         <div class="footerb">
             <div class="but1">
                 <form action="https://www.muenchen.de/veranstaltungen" target="_blank">
                     <button class="butt"> Andere... </button>
                     </form>
-                </div>
+                </div>               
                 <div class="but">
                 <p class="menua"><b>
                 <a href="Hotelsc.html" class="mena"> Hotels </a>
