--- a/Home.html
+++ b/Home.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta cherset="UTF-8">
-    <Link rel="stylesheet" href="qqq.css"/>
+    <Link rel="stylesheet" href="DT.css"/>
     <link rel="shortcut icon" href="Bild/Stadt.ico" type="image/x-icon"/>
     <title> der Stadt München</title>
 </head>
@@ -19,10 +19,10 @@
                 <a href="https://www.youtube.com/channel/UCUpmzhtRAiRYDUmpshbt9wA" target="_blank"><img src="Bild/yo.png" alt="" class="png"></a> </p>
             </div>
         </div>    
-                <div class="kontent">
-                    <div class="text">
-                        <p>
-                        <a href="Homec.html" class="Münchens"> München</a><br><b>
+        <div class="kontent">
+             <div class="text">
+                <p>
+                     <a href="Homec.html" class="Münchens"> München</a><br><b>
                         Audiodatei abspielen oder bairisch  Minga?/i ist die<br>
                         Landeshauptstadt des Freistaates Bayern. Sie ist mit<br>
                         1.487.708 Einwohnern (31. Dezember 2021) die <br>
@@ -35,15 +35,16 @@
                         Planungsregion München (2,93 Millionen Einwohner)...</b>
                         <!-- <a href="https://de.wikipedia.org/wiki/M%C3%BCnchen" class="weiter">weiter</a> -->
                         <br>                      
-                        </p>
-                    </div>
+                     </p>
+             </div>
             
-                <div class="button">
-                    <form action="https://de.wikipedia.org/wiki/M%C3%BCnchen" target="_blank">
-                    <button class="butt"> Weiter </button>
-                    </form>
-                </div>
+            <div class="button">
+                <form action="https://de.wikipedia.org/wiki/M%C3%BCnchen" target="_blank">
+                <button class="butt"> Weiter </button>
+                </form>
             </div>
+        </div>
+
         <div class="footer">
                 <p class="menua"><b>
                 <a href="Transport.html" class="mena"> Transport </a>
