--- a/Hotelsc.html
+++ b/Hotelsc.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta cherset="UTF-8">
-    <Link rel="stylesheet" href="qqqy.css"/>
+    <Link rel="stylesheet" href="Ht.css"/>
     <link rel="shortcut icon" href="Bild/Stadt.ico" type="image/x-icon"/>
     <title> Hotels </title>
 </head>
