--- a/Spiel.html
+++ b/Spiel.html
@@ -14,41 +14,41 @@
             <div class="dasbild" id="F1">
                 <img src="Bild/Marplatz.jpg" alt="" class="bild">
                 <a href="https://de.wikipedia.org/wiki/Marienplatz_(M%C3%BCnchen)" class="am"> Erkennen Sie genau am Bild... </a>
-                <input type="text" class="inp" id="f1"><br>
+                <input type="text" placeholder="schreiben Sie hier..." class="inp" id="f1"><br>
                 <button class="antwort" id="W1" onclick="W1()"> Weiter...  </button>
             </div>
             <div class="dasbild none" id="F2">
                 <img src="Bild/Olimpt.jpg" alt="" class="bild">
                 <a href="https://de.wikipedia.org/wiki/Olympiaturm" class="am"> Erkennen Sie genau am Bild </a>
-                <input type="text" class="inp" id="f2"><br>
+                <input type="text" placeholder="schreiben Sie hier..." class="inp" id="f2"><br>
                 <button class="antwort" id="Z2" onclick="Z2()">...zurück  </button>
                 <button class="antwort" id="W2" onclick="W2()"> weiter...  </button>
             </div>
             <div class="dasbild none" id="F3">
                 <img src="Bild/Statue.jpg" alt="" class="bild">
                 <a href="https://de.wikipedia.org/wiki/Bavaria" class="am"> Erkennen Sie genau am Bild </a>
-                <input type="text" class="inp" id="f3"><br>
+                <input type="text" placeholder="schreiben Sie hier..." class="inp" id="f3"><br>
                 <button class="antwort" id="Z3" onclick="Z3()"> ...zurück  </button>
                 <button class="antwort" id="W3" onclick="W3()"> weiter...  </button>
             </div>
             <div class="dasbild none" id="F4">
                 <img src="Bild/FrKirche.jpg" alt="" class="bild">
                 <a href="https://de.wikipedia.org/wiki/Frauenkirche_(M%C3%BCnchen)" class="am"> Erkennen Sie genau am Bild </a>
-                <input type="text" class="inp" id="f4"><br>
+                <input type="text" placeholder="schreiben Sie hier..." class="inp" id="f4"><br>
                 <button class="antwort" id="Z4" onclick="Z4()"> ...zurück  </button>
                 <button class="antwort" id="W4" onclick="W4()"> weiter...  </button>
             </div>
             <div class="dasbild none" id="F5">
                 <img src="Bild/EG.jpg" alt="" class="bild">
                 <a href="https://de.wikipedia.org/wiki/Englischer_Garten_(M%C3%BCnchen)" class="am"> Erkennen Sie genau am Bild </a>
-                <input type="text" class="inp" id="f5"><br>
+                <input type="text" placeholder="schreiben Sie hier..." class="inp" id="f5"><br>
                 <button class="antwort" id="Z5" onclick="Z5()"> ...zurück  </button>
                 <button class="antwort" id="W5" onclick="W5()"> weiter...  </button>
             </div>
             <div class="dasbild none" id="F6">
                 <img src="Bild/Nfschl.jpg" alt="" class="bild">
                 <a href="https://de.wikipedia.org/wiki/Schloss_Nymphenburg" class="am"> Erkennen Sie genau am Bild </a>
-                <input type="text" class="inp" id="f6"><br>
+                <input type="text" placeholder="schreiben Sie hier..." class="inp" id="f6"><br>
                 <button class="antwort" id="Z6" onclick="Z6()"> ...zurück  </button>
                 <button class="antwort" id="antwort" onclick="Probieren()"> p r o b i e r e n . . .  </button>
             </div>
