Dobavlena knopka (Restart)

--- a/Spiel.html
+++ b/Spiel.html
@@ -48,12 +48,10 @@
             <div class="dasbild none" id="F6">
                 <img src="Bild/Nfschl.jpg" alt="" class="bild">
                 <a href="https://de.wikipedia.org/wiki/Schloss_Nymphenburg" class="am"> Erkennen Sie genau am Bild </a>
-                <input type="text" placeholder="schreiben Sie hier..." class="inp" id="f6"><br>
+                <input type="text" placeholder="schreiben Sie hier..." class="inp" id="f6"> <button class="none" id="Z0" onclick="Z0()"> Einmal? </button><br>
                 <button class="antwort" id="Z6" onclick="Z6()"> ...zurück  </button>
                 <button class="antwort" id="antwort" onclick="Probieren()"> p r o b i e r e n . . .  </button>
             </div>
-            <br>
-            <button  class="none" id="antwort" onclick="Probieren()"> p r o b i e r e n . . .  </button>
         </div>
 <script src="Index.js"></script>
     </body>
