Cleaned up the code, Converted the size value to a percentage

--- a/Eventsc.html
+++ b/Eventsc.html
@@ -67,7 +67,7 @@
                     </form>
                 </div>               
                 <div class="but">
-                <p class="menua"><b>
+                <p class="menuaf"><b>
                 <a href="Hotelsc.html" class="mena"> Hotels </a>
                 <a href="Restaurantc.html" class="mena"> Restaurant </a>
                 <a href="Sehenswürdigkeitec.html" class="mena"> Sehenswürdigkeite </a>
