--- a/Homec.html
+++ b/Homec.html
@@ -41,7 +41,7 @@
             
              <div class="button">
                 <form action="https://de.wikipedia.org/wiki/M%C3%BCnchen" target="_blank">
-                    <button class="butt"> Weiter </button>
+                    <button class="buttt"> Weiter </button>
                 </form>
             </div>
         </div>
