--- a/Hotels.html
+++ b/Hotels.html
@@ -69,7 +69,7 @@
                     </form>
                 </div>
             <div class="but">
-                <p class="menua"><b>
+                <p class="menuaf"><b>
                 <a href="Restaurant.html" class="mena"> Restaurant </a>
                 <a href="Sehenswürdigkeite.html" class="mena"> Sehenswürdigkeite </a>
                 <a href="Medizin.html" class="mena"> die Medizin </a></b>
