--- a/Medizin.html
+++ b/Medizin.html
@@ -66,7 +66,7 @@
                 </form>
             </div>
             <div class="but">
-                <p class="menua"><b>
+                <p class="menuaf"><b>
                     <a href="Transport.html" class="mena"> Transport </a>
                     <a href="Events.html" class="mena"> Events </a>
                     <a href="Touristen.html" class="mena"> Informationen für Touristen </a></b> 
