--- a/Restaurant.html
+++ b/Restaurant.html
@@ -67,7 +67,7 @@
                 </form>
             </div>
             <div class="but">
-                <p class="menua"><b>
+                <p class="menuaf"><b>
                     <a href="Events.html" class="mena"> Events </a>
                     <a href="Touristen.html" class="mena"> Informationen für Touristen </a>
                     <a href="Medizin.html" class="mena"> die Medizin </a></b> 
