--- a/Touristenc.html
+++ b/Touristenc.html
@@ -8,7 +8,7 @@
 </head>
     <body>
         <div class="nav">
-            <div class="logo"><b><a href="Homec.html" class="logoa"> Informationen für Touristen </a></b>
+            <div class="logo"><b><a href="Homec.html" class="logoa"> für Touristen </a></b>
             </div>
             <div class="menu"> 
                 <p class="menua"><b>
@@ -67,7 +67,7 @@
                 </form>
             </div>
             <div class="but">
-                <p class="menua"><b>
+                <p class="menuaf"><b>
                     <a href="Sehenswürdigkeitec.html" class="mena"> Sehenswürdigkeite</a>
                     <a href="Restaurantc.html" class="mena"> Restaurant</a>
                     <a href="Medizinc.html" class="mena"> die Medizin </a>
