--- a/Transportc.html
+++ b/Transportc.html
@@ -65,7 +65,7 @@
                     </form>
             </div>
             <div class="but">
-                <p class="menua"><b>
+                <p class="menuaf"><b>
                     <a href="Sehenswürdigkeitec.html" class="mena"> Sehenswürdigkeite</a>
                     <a href="Restaurantc.html" class="mena"> Restaurant</a>
                     <a href="Medizinc.html" class="mena"> die Medizin </a>
