--- a/Events.html
+++ b/Events.html
@@ -66,7 +66,7 @@
                 </form>
                 </div>
                 <div class="but">
-                <p class="menua"><b>
+                <p class="menuaf"><b>
                 <a href="Hotels.html" class="mena"> Hotels </a>
                 <a href="Restaurant.html" class="mena"> Restaurant </a>
                 <a href="Sehenswürdigkeite.html" class="mena"> Sehenswürdigkeite </a>
