--- a/Medizinc.html
+++ b/Medizinc.html
@@ -67,7 +67,7 @@
                 </form>
             </div>
             <div class="but">
-                <p class="menua"><b>
+                <p class="menuaf"><b>
                     <a href="Transportc.html" class="mena"> Transport </a>
                     <a href="Eventsc.html" class="mena"> Events </a>
                     <a href="Touristenc.html" class="mena"> Informationen für Touristen </a></b> 
